# COMP442-Compiler_Design

./: .gitignore  CMakeLists.txt  COMP 442 A1.docx  Doxyfile  README.md  tokens_output.txt
My-tests/: test1.outlexerrors  test1.outlextokensflaci  test1.src
My-tests/AST/: array.src  ast_invalid_decls_calls.src  ast_valid_arrays.src  ast_valid_classes_inheritance.src  ast_valid_control_flow.src  ast_valid_expressions.src  ast_valid_functions_params.src  ast_valid_member_chains.src  fail_ast_invalid_decls_calls.src  member_access.src  nested.src  pass_array.src  pass_ast_valid_arrays.src  pass_ast_valid_classes_inheritance.src  pass_ast_valid_control_flow.src  pass_ast_valid_expressions.src  pass_ast_valid_functions_params.src  pass_ast_valid_member_chains.src  pass_member_access.src  pass_nested.src
My-tests/CodeGen/: README.md  cg_alloc_basic_arrays.src  cg_alloc_basic_types.src  cg_alloc_object.src  cg_alloc_object_array.src  cg_array_expr_index.src  cg_big_control_arrays_calls.src  cg_big_objects_methods.src  cg_ctrl_if_while_expr.src  cg_functions_return.src  cg_functions_return_pending.src  cg_io_terminal_read.src  cg_member_calls_and_fields.src  cg_member_calls_and_fields_pending.src  cg_object_array_members.src  cg_object_array_members_pending.src  cg_object_inheritance_alloc.src
My-tests/LEXER/: lexer_case_numeric_edges.src  (+5 more)
include/: AST.h  codegen.h  io.h  my_parser.h  parser.h  semantic.h  token.h  ui.h
scripts/: run-tests.ps1
src/: AST.cpp  codegen.cpp  driver.cpp  io.cpp  lexdriver.cpp  my_parser.cpp  parser.cpp  semantic.cpp  token.cpp  ui.cpp
(+590 files in other folders)
